Unexpected spacing at the end of a textview when using child widgets.
In my project I have a need to add child widgets into TextView. Anchor is created at the end iter, then I add widget using add_child_at_anchor(...).
Here is one of the places where I encounter this bug:
I expected TextView to end at the edge of the picture, but it has additional height of the picture.
Node: (I removed the picture to make code smaller)
transform {
transform: translate(0, 34);
child: container {
color {
bounds: 0 0 560 597;
color: rgb(30,30,30);
}
container {
container {
text {
color: rgb(255,255,255);
font: "Noto Sans 14.667px";
glyphs: "Spoiler body";
offset: 0 296;
hint-metrics: on;
}
cairo {
bounds: 0 0 466 300;
pixels: url("data:image/png;base64,\
iVBORw0KGgoAAAANSUhEUgAAAdIAAAEsCAYAAAB3+DJfAAAABmJLR0QA/wD/AP+gvaeTAAACNUlE\
QVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAfg2KBAABCu/M\
DAAAAABJRU5ErkJggg==\
");
script: url("data:;base64,\
JSFDYWlyb1NjcmlwdAo=\
");
}
}
transform {
transform: translate(86, 0);
child: texture {
bounds: 0 0 379 296;
texture: url("data:image/png;base64,\
iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAARjSUNQAQ0A\
AZxpOzIAAAApSURBVBiVY/zPcOY/AxpgZDBhRBdjQhfABQZQIYajGRgYGLB5cCh4BgDPjgXd7dTX\
FQAAAABJRU5ErkJggg==\
");
}
}
}
}
}
Edited by VBB